# 420J12AS_Midterm

./: .clang-format  CMakeLists.txt
src/: entity.cpp  entity.h  main.cpp
